<resources>
    <string name="app_name">City Care</string>
    <string name="welcome_to">Welcome to</string>
    <string name="get_started">Get started</string>
    <string name="report_it">Report it, we will handle it!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="continue_btn">Continue</string>
    <string name="or">or</string>

    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="my_complaints">My Complaints</string>
    <string name="complaints_sent">Complaint is sent!</string>
    <string name="complaints_success">Your complaint was successfully sent. For more details, check your complaint under Reports tab</string>
    <string name="my_suggestions">My Suggestions</string>
    <string name="suggestions_sent">Suggestion is sent!</string>
    <string name="suggestions_success">Your suggestion was successfully sent. For more details, check your suggestion under Reports tab</string>

    <string name="select_location">Select location</string>
    <string name="upload_picture">Upload picture</string>
    <string name="choose_category">Choose category</string>

    <string name="complaint_type">COMPLAINT</string>
    <string name="suggestion_type">SUGGESTION</string>

    <string name="sent">SENT</string>
    <string name="in_progress">IN PROGRESS</string>
    <string name="done">DONE</string>
    <string name="reviewed">REVIEWED</string>

    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="select_option">Select option</string>

    <string name="select_image_please">Select an image please!</string>
    <string name="permission_necessary">Permission necessary!</string>
    <string name="camera_necessary">Camera is necessary!</string>
    <string name="storage_necessary">Storage permission is necessary!</string>

    <string name="choose_category_please">Choose category please!</string>
    <string name="write_something">Write something please!</string>
    <string name="pick_picture">Pick a picture please!</string>
    <string name="choose_location">Choose a location please!</string>

    <string name="road">Road</string>
    <string name="park">Park</string>
    <string name="bridge">Bridge</string>
    <string name="side_walk">Side walk</string>
    <string name="field">Field</string>
    <string name="bike_lane">Bike lane</string>
    <string name="tunnel">Tunnel</string>
    <string name="parking_area">Parking area</string>
    <string name="traffic_sign">Traffic sign</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="tram">Tram</string>
    <string name="waterway">Waterway</string>
    <string name="canal">Canal</string>
    <string name="port">Port</string>
    <string name="airport">Airport</string>
    <string name="other">Other</string>

    <string name="finding_location">Finding location...</string>
    <string name="set_location">Set location</string>
    <string name="enable_gps">Enable GPS?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="error_occured">Error occurred!</string>


    <string name="selected_language">Selected Language: </string>
    <string name="your_complaint_about">Your complaint about </string>
    <string name="in"> in </string>

    <string name="faq">FAQ</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="apply">APPLY</string>
    <string name="notifications">Notifications</string>
    <string name="reports">Reports</string>
    <string name="emergency_numbers">Emergency numbers</string>
    <string name="language_setting">Language setting</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="complaint">Complaint</string>
    <string name="more">More</string>
    <string name="give">Give a</string>
    <string name="suggestion">Suggestion</string>
    <string name="about_app">About the app</string>
    <string name="find">Find</string>
    <string name="all_new_complaints">All new complaints</string>
    <string name="see_all_new_complaints">See all new complaints</string>
    <string name="find_report">Find report</string>
    <string name="complaint_number">Complaint number</string>
    <string name="complaint_nr">Complaint number:</string>
    <string name="report_details">Report details</string>
    <string name="reportID">Report number</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="submitted">Submitted on</string>
    <string name="status">Status</string>
    <string name="feedback">Feedback</string>
    <string name="last_update">Last update</string>
    <string name="reports_number">Report number</string>
    <string name="report_not_found">Sorry, your report could not be found. Please try again with the correct report number.</string>
    <string name="suggestion_nr">Suggestion number:</string>
    <string name="suggestion_number">Suggestion number</string>
    <string name="city_care">City Care</string>
    <string name="how_to_submit_complaint">How to submit complaint?</string>
    <string name="how_to_retrieve_complaint">How to retrieve my complaint?</string>
    <string name="how_to_change_the_language">How to change the language?</string>
    <string name="version">City Care Android v1.0.0</string>

    <string name="about_the_app_desc">City care is a service system for people\'s complaints and online aspirational service. Now all residents can submit complaints about any damage to infrastructure easily, integrated, and completely. City Care was developed by the government in order to increase public participation in the supervision of urban planning and government performance in the development of public infrastructure.</string>
    <string name="police">Police</string>
    <string name="ambulance">Ambulance</string>
    <string name="pln">State Electricity Department</string>
    <string name="firefighter">Firefighter</string>
    <string name="image_too_large">Image size is too large. Please choose another image!</string>

    <string name="faq_submit_complaint_1">1. Go to the Complaint tab.</string>
    <string name="faq_submit_complaint_2">2. Fill in the form (category, description, picture, and location).</string>
    <string name="faq_submit_complaint_3">3. Click the send button.</string>
    <string name="faq_submit_complaint_4">4. Please, take note of the complaint number. The number can be used to update the status of complaint.</string>
    <string name="faq_retrieve_complaint_1">1. Go to Reports tab.</string>
    <string name="faq_retrieve_complaint_2">2. Enter the complaint’s number.</string>
    <string name="faq_retrieve_complaint_3">"3. Click the find button to retrieve the complaint. "</string>
    <string name="faq_change_language_1">1. Go to more tab.</string>
    <string name="faq_change_language_2">2. Go to language setting.</string>
    <string name="faq_change_language_3">3. Choose one of a preferred language.</string>
    <string name="faq_change_language_4">"4. Click the apply button. "</string>


</resources>
