<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".activity.WelcomeActivity"
    android:alpha="0.8"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcometo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textAlignment="center"
            android:textColor="#009F50"
            android:textSize="15pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ccs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_care"
            android:textAlignment="center"
            android:textColor="#009F50"
            android:textSize="15pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/report_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/report_it"
            android:textAlignment="center"
            android:textColor="#009F50"
            android:textSize="7pt"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="52dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/green_button"
            android:text="@string/continue_btn"
            android:textColor="#FFF"
            android:textStyle="bold"/>


    </LinearLayout>


</RelativeLayout>