<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".fragment.SignupFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-30dp"
            android:autofillHints="name"
            android:background="@drawable/login_bg_white"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingLeft="50dp"
            android:paddingRight="40dp"
            android:paddingBottom="12dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-30dp"
            android:autofillHints="email_address"
            android:background="@drawable/login_bg_white"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="50dp"
            android:paddingRight="40dp"
            android:paddingBottom="12dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/login_bg_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="50dp"
            android:paddingRight="40dp"
            android:paddingBottom="12dp" />


        <Button
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/yellow_button"
            android:text="@string/continue_btn"
            android:textColor="#FFF"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity = "center"
        />

</RelativeLayout>