<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".activity.ReportsActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/main_logo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="57dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-black"
                android:scaleType="fitCenter"
                android:text="@string/reports"
                android:textAlignment="center"
                android:textColor="#515C6F"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/find_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:text="@string/find_report"
                android:textAlignment="center"
                android:textColor="#515C6F"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/complaint_number"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="description"
                android:background="@drawable/form_round_btn"
                android:gravity="top"
                android:hint="@string/reports_number"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/find"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/green_button"
                android:text="@string/find"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/report_not_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="15dp"
                android:scaleType="fitCenter"
                android:text="@string/report_not_found"
                android:textAlignment="center"
                android:textColor="#DC143C"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/see_all_new_complaints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:text="@string/see_all_new_complaints"
                android:textAlignment="center"
                android:textColor="#515C6F"
                android:textSize="15sp" />

            <Button
                android:id="@+id/all_new_complaints"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/yellow_button"
                android:text="@string/all_new_complaints"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.NavigationActivity">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            app:itemIconTint="@drawable/bottom_nav_selector"
            app:itemTextColor="@drawable/bottom_nav_selector"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/menu"

            />

    </RelativeLayout>

</RelativeLayout>