<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuggestionSentActivity"
    android:background="@color/lightGrey"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:background="#fff">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleX="3"
            android:scaleY="3"
            android:src="@drawable/home_logo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="490dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/sent_green_check"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggestions_sent"
            android:textAlignment="center"
            android:textSize="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggestions_success"
            android:textAlignment="center"
            android:padding="20dp"
            android:textSize="15dp"
            />

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingLeft="-40dp"
            android:paddingBottom="10dp"
            android:background="@drawable/sent_green_btn"
            android:text="@string/my_suggestions"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>



</RelativeLayout>