<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComplaintSentActivity"
    android:background="@color/lightGrey"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:background="#fff">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleX="3"
            android:scaleY="3"
            android:src="@drawable/home_logo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="490dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/sent_yellow_check"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complaints_sent"
            android:textAlignment="center"
            android:textSize="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complaints_success"
            android:textAlignment="center"
            android:padding="20dp"
            android:textSize="15dp"
            />


        <Button
            android:id="@+id/my_complaints"
            android:layout_width="265dp"
            android:layout_height="86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/sent_yellow_btn"
            android:paddingLeft="-40dp"
            android:paddingBottom="10dp"
            android:text="@string/my_complaints"
            android:textColor="#FFF"
            android:textStyle="bold"

            />


    </LinearLayout>



</RelativeLayout>