<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MoreActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/main_logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="79dp"
            android:fontFamily="sans-serif-black"
            android:scaleType="fitCenter"
            android:text="@string/more"
            android:textAlignment="center"
            android:textColor="#515C6F"
            android:textSize="25dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/languageSetting"
                android:layout_width="350dp"
                android:layout_height="85dp"
                android:background="@drawable/profile_text_btn"
                android:paddingLeft="50dp"
                android:paddingTop="25dp"
                android:text="@string/language_setting"
                android:textSize="15dp" />


            <TextView
                android:layout_width="350dp"
                android:layout_height="85dp"
                android:background="@drawable/profile_text_btn"
                android:paddingLeft="50dp"
                android:paddingTop="25dp"
                android:text="@string/emergency_numbers"
                android:textSize="15dp" />


            <TextView
                android:id="@+id/about_the_app"
                android:layout_width="350dp"
                android:layout_height="85dp"
                android:background="@drawable/profile_text_btn"
                android:paddingLeft="50dp"
                android:paddingTop="25dp"
                android:text="@string/about_app"
                android:textSize="15dp" />


        </LinearLayout>

    </LinearLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.NavigationActivity">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            app:itemIconTint="@drawable/bottom_nav_selector"
            app:itemTextColor="@drawable/bottom_nav_selector"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/menu"

            />

    </RelativeLayout>

</RelativeLayout>